[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
pcap = "1.0.0"
pcap-sys = "0.1.3"

chrono = "0.4.23" # take a timestamp and convert to whatever other formats are needed.



