[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
pcap = "1.0.0"
pcap-sys = "0.1.3"
pcap-parser = "0.14.0"
#net-parser-rs = "0.3"
pktparse = "0.7.1"
etherparse = "0.13.0"
chrono = "0.4.23" # take a timestamp and convert to whatever other formats are needed.
clap = {version = "4.0.29", features = ["derive"] }



