[package]
name = "rust_project"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
pcap = "1.0.0"
pcap-sys = "0.1.3"
pcap-parser = "0.14.0"
pktparse = "0.7.1"
etherparse = "0.13.0"
chrono = "0.4.23" # take a timestamp and convert to whatever other formats are needed.
clap = {version = "4.0.29", features = ["derive"] }
dirs ="4.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_json_any_key = "2.0.0"
regex = "1.7.0"



